--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   </style>
 </head>
 <body>
-  <h2 style="text-align:center;">Horarios de Reuniones: Prof. Andy 🟢 y Prof. Dennisse 🌸</h2>
+  <h2 style="text-align:center;">Horarios de Reuniones</h2>
+  <h2 style="text-align:center;">Prof. Andy 🟢</h2>
+  <h2 style="text-align:center;">Prof. Dennisse 🔴</h2>
   <div id="calendar"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
