--- a/index.html
+++ b/index.html
@@ -4,12 +4,51 @@
   <meta charset="UTF-8">
   <title>Horarios de Reuniones</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <style>
     body { font-family: sans-serif; margin: 20px; }
     #calendar { max-width: 900px; margin: auto; }
   </style>
 </head>
+   <header>
+        <!-- header inner -->
+        <div  class="head_top">
+           <div class="header">
+              <div class="container-fluid">
+                 <div class="row">
+                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                       <div class="full">
+                          <div class="center-desk">
+                          </div>
+                       </div>
+                    </div>
+                 </div>
+              </div>
+           </div>
+  <section class="banner_main">
+        <div class="container-fluid">
+           <div class="row d_flex">
+              <div class="col-md-6">
+                 <div class="text-bg">
+                    <h1>INCUBA ANDINA LAB</h1>
+                    <p>Dirección de Innovación y Emprendimieto</p>
+                    <a href="https://sites.google.com/uandina.edu.pe/incubalab">Conocenos</a>
+                 </div>
+              </div>
+              <div class="col-md-6">
+                 <div class="text-img">
+                    <figure><img src="images/incuba.png " alt="#"/></figure>
+                 </div>
+              </div>
+           </div>
+        </div>
+     </section>
 <body>
   <h1 style="text-align:center;">Horarios de Reuniones</h1>
   <h2 style="text-align:center;">Prof. Andy 🟢</h2>
@@ -64,5 +103,16 @@
       calendar.render();
     });
   </script>
-</body>
+  <footer class="footer">
+        <div class="container text-center">
+            <p 
+                class="text-muted">Dirección de Innovación y Emprendimiento
+                <h2 style="text-align:center;">Prof. Andy 🟢</h2>
+            </p>
+        </div>
+    </footer>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>      
 </html>
