--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
            </div>
         </div>
      </section>
+</header>
 <body>
   <h1 style="text-align:center;">Horarios de Reuniones</h1>
   <h2 style="text-align:center;">Prof. Andy 🟢</h2>
@@ -103,16 +104,8 @@
       calendar.render();
     });
   </script>
-  
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-          <footer class="footer">
-        <div class="container text-center">
-            <p 
-                class="text-muted">Dirección de Innovación y Emprendimiento
-            </p>
-        </div>
-    </footer>
 </html>
