--- a/index.html
+++ b/index.html
@@ -1,80 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <!-- basic -->
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <!-- mobile metas -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-        <!-- site metas -->
-        <meta name="keywords" content="">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <!-- bootstrap css -->
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <!-- sty    le css -->
-        <link rel="stylesheet" href="css/style.css">
-        <!-- Responsive-->
-        <link rel="stylesheet" href="css/responsive.css">
-        <!-- fevicon -->
-        <link rel="icon" href="images/fevicon.png" type="image/gif" />
-        <!-- Scrollbar Custom CSS -->
-        <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
-        <!-- Tweaks for older IEs-->
-        <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Horarios de Reuniones</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Horarios de Reuniones</title>
+  <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
+  <style>
+    body { font-family: sans-serif; margin: 20px; }
+    #calendar { max-width: 900px; margin: auto; }
+  </style>
+</head>
 <body>
-    <header>
-        <!-- header inner -->
-        <div  class="head_top">
-           <div class="header">
-              <div class="container-fluid">
-                 <div class="row">
-                    <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
-                       <div class="full">
-                          <div class="center-desk">
-                          </div>
-                       </div>
-                    </div>
-                 </div>
-              </div>
-           </div>
-           <!-- end header inner -->
-           <!-- end header -->
-    <!-- banner -->
-    <section class="banner_main">
-        <div class="container-fluid">
-           <div class="row d_flex">
-              <div class="col-md-6">
-                 <div class="text-bg">
-                    <h1>INCUBA ANDINA LAB</h1>
-                    <p>Dirección de Innovación y Emprendimieto</p>
-                    <a href="https://sites.google.com/uandina.edu.pe/incubalab">Conocenos</a>
-                 </div>
-              </div>
-              <div class="col-md-6">
-                 <div class="text-img">
-                    <figure><img src="images/incuba.png " alt="#"/></figure>
-                 </div>
-              </div>
-           </div>
-        </div>
-     </section>
-    </div>
-    </header> 
+  <h1 style="text-align:center;">Horarios de Reuniones</h1>
+    <div style="display: flex; justify-content: center; gap: 40px; margin-bottom: 20px;">
+  <h2 style="margin: 0;">Prof. Andy 🟢</h2>
+  <h2 style="margin: 0;">Prof. Dennisse 🔴</h2>
+</div>
+  <div id="calendar"></div>
 
-        <div id="result" class="row justify-content-center mt-3"></div>
-    </div>
-  
-<script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', async function () {
       const calendarEl = document.getElementById('calendar');
@@ -87,18 +30,9 @@
 
       // Asignar color por docente
       const eventos = [
-  ...andyEvents.map(ev => ({ 
-    ...ev, 
-    color: ev.extendedProps.estado === "Disponible" ? '#28a745' : '#999',
-    classNames: [ev.extendedProps.estado === "Disponible" ? 'disponible' : 'ocupado'],
-  })),
-  ...dennisseEvents.map(ev => ({
-    ...ev,
-    color: ev.extendedProps.estado === "Disponible" ? '#e83e8c' : '#999',
-    classNames: [ev.extendedProps.estado === "Disponible" ? 'disponible' : 'ocupado'],
-  }))
-];
-
+        ...andyEvents.map(ev => ({ ...ev, color: '#28a745' })),       // verde Andy
+        ...dennisseEvents.map(ev => ({ ...ev, color: '#e83e8c' }))    // rosa Dennisse
+      ];
 
       const calendar = new FullCalendar.Calendar(calendarEl, {
         initialView: 'timeGridWeek',
@@ -109,7 +43,7 @@
         events: eventos,
         eventClick: function (info) {
           if (info.event.extendedProps.estado === "Disponible") {
-            const confirmar = confirm(`¿Deseas registrarte con el/la prof. ${info.event.extendedProps.docente}?\nHorario: ${info.event.start.toLocaleString()}`);
+            const confirmar = confirm(¿Deseas registrarte con el/la prof. ${info.event.extendedProps.docente}?\nHorario: ${info.event.start.toLocaleString()});
             if (confirmar) {
               alert("Aquí se abriría un formulario de registro 📝");
             }
@@ -122,18 +56,5 @@
       calendar.render();
     });
   </script>
-    <footer class="footer">
-        <div class="container text-center">
-            <p 
-                class="text-muted">Dirección de Innovación y Emprendimiento
-            </p>
-        </div>
-    </footer>
-
-    <!-- Bootstrap JS y dependencias -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
