--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
       background-color: #00AEEF;
       border-color: #00AEEF;
     }
+    footer {
+  background-color: #003366;
+  color: white;
+  text-align: center;
+  padding: 15px 10px;
+  font-size: 0.9rem;
+  margin-top: 40px;
+}
   </style>
 </head>
 <body>
@@ -93,4 +101,7 @@
     });
   </script>
 </body>
+  <footer>
+  <p>© 2025 Incuba Andina Lab - Universidad Andina del Cusco. Todos los derechos reservados.</p>
+</footer>
 </html>
