--- a/index.html
+++ b/index.html
@@ -6,40 +6,6 @@
   <title>Login - Incuba Andina Lab</title>
   <link rel="stylesheet" href="styles1.css" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #4e54c8, #8f94fb); /* violeta a celeste institucional */
-      color: white;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-    }
-
-    #app {
-      margin-top: 15vh;
-    }
-
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 30px;
-    }
-
-    #loginBtn {
-      background-color: white;
-      color: #4e54c8;
-      border: none;
-      padding: 15px 30px;
-      font-size: 1rem;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: 0.3s ease;
-    }
-
-    #loginBtn:hover {
-      background-color: #e2e2ff;
-    }
-  </style>
 </head>
 <body>
   <div id="app">
@@ -54,7 +20,8 @@
 
     const firebaseConfig = {
       apiKey: "AIzaSyAe3LW9dme23o1AGXqg4WkJ0-hrqRxx8h4",
-      authDomain: "reservas-incuba.firebaseapp.com",
+      //authDomain: "reservas-incuba.firebaseapp.com",
+      authDomain: "uandina.edu.pe",
       projectId: "reservas-incuba",
       storageBucket: "reservas-incuba.appspot.com",  // corregido ".app" -> ".appspot.com"
       messagingSenderId: "321837960358",
