--- a/main.html
+++ b/main.html
@@ -30,8 +30,8 @@
       ]);
 
       const eventos = [
-        ...andyEvents.map(ev => ({ ...ev, color: '#00ef2c' })),    // celeste para Andy
-        ...dennisseEvents.map(ev => ({ ...ev, color: '#e386be' })) // violeta para Dennisse
+        ...andyEvents.map(ev => ({ ...ev, color: '#67bf5c' })),    // celeste para Andy
+        ...dennisseEvents.map(ev => ({ ...ev, color: '#c98db1' })) // violeta para Dennisse
       ];
 
       const calendar = new FullCalendar.Calendar(calendarEl, {
