--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Reuniones con Docentes - Incuba Andina Lab | UAC</h1>
+    <h1>Reuniones con Docentes - Pre Incubación</h1>
     <div style="display: flex; justify-content: center; gap: 40px; margin-bottom: 20px;">
   <h2 style="margin: 0;">Prof. Andy 🟢</h2>
   <h2 style="margin: 0;">Prof. Dennisse 🔴</h2>
