--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         window.location.href = "calendario.html";
       } catch (error) {
         console.error("Error en login:", error);
-        window.location.href = "main.html";
+        //window.location.href = "main.html";
         //Swal.fire('Error al iniciar sesión', error.message, 'error');
       }
     });
