--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
 <body>
   <div id="app">
     <h1>Bienvenido a <br>Incuba Andina Lab</h1>
-
-    <form id="loginForm">
-      <input type="email" id="email" placeholder="Correo institucional" required />
-      <input type="password" id="password" placeholder="Contraseña" required />
-      <button type="submit">Ingresar</button>
-    </form>
-
-    <p style="margin-top: 20px;">o</p>
-    <button id="googleLoginBtn">Ingresar con Google</button>
+    <button id="loginBtn">Ingresar</button>
   </div>
 
   <script type="module">
@@ -27,7 +19,6 @@
       getAuth,
       GoogleAuthProvider,
       signInWithPopup,
-      signInWithEmailAndPassword,
       signOut
     } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js";
 
@@ -43,34 +34,9 @@
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+    const loginBtn = document.getElementById('loginBtn');
 
-    const loginForm = document.getElementById('loginForm');
-    const googleLoginBtn = document.getElementById('googleLoginBtn');
-
-    // Login con correo y contraseña
-    loginForm.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value;
-
-      if (!email.endsWith('@uandina.edu.pe')) {
-        Swal.fire('Acceso restringido', 'Solo se permite acceso con correos institucionales @uandina.edu.pe', 'error');
-        return;
-      }
-
-      try {
-        const userCredential = await signInWithEmailAndPassword(auth, email, password);
-        const user = userCredential.user;
-        localStorage.setItem('userEmail', user.email);
-        await Swal.fire(`Bienvenido, ${user.email}`, '', 'success');
-        window.location.href = "acceso.html";
-      } catch (error) {
-        Swal.fire('Error al iniciar sesión', error.message, 'error');
-      }
-    });
-
-    // Login con Google
-    googleLoginBtn.addEventListener('click', async () => {
+    loginBtn.addEventListener('click', async () => {
       const provider = new GoogleAuthProvider();
       try {
         const result = await signInWithPopup(auth, provider);
