--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
   <div id="app">
     <h1>Bienvenido a <br>Incuba Andina Lab</h1>
-    <button id="loginBtn">Ingresar</button>
+    <button id="loginBtn">
+    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google icon">
+    Ingresar con cuenta institucional
+    </button>
   </div>
 
   <script type="module">
