--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <div id="app">
-    <h1>Bienvenido a <br>Incuba Andina Lab</h1>
+    <img src="images/incuba.png" alt="Logo Incuba Andina" id="logo" />
+      Bienvenido a <br />Incuba Andina Lab
     <button id="loginBtn">
     <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google icon">
     Ingresar con cuenta institucional
