--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="images/incuba.png" alt="Logo Incuba Andina" id="logo" />
       Bienvenido a <br />Incuba Andina Lab
     <button id="loginBtn">
-    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google icon">
+    <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="GoogleIcon">
     Ingresar con cuenta institucional
     </button>
   </div>
