--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
+  <img src="images/incuba.png" alt="Logo Incuba Andina" id="logo" />
   <div id="app">
     <img src="images/incuba.png" alt="Logo Incuba Andina" id="logo" />
       Bienvenido a <br />Incuba Andina Lab
