--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <img src="images/incuba.png" alt="Logo Incuba Andina" id="logo" />
     <div id="app">
-      <h1></h1>Bienvenido a <br />Incuba Andina Lab</h1>
+      <h1>Bienvenido a <br />Incuba Andina Lab</h1>
     <button id="loginBtn">
     <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="GoogleIcon">
     Ingresar con cuenta institucional
