--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Bienvenido a <br />Incuba Andina Lab</h1>
     <button id="loginBtn">
     <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="GoogleIcon">
-    Ingresar con cuenta institucional
+    Ingresar con cuenta de google
     </button>
   </div>
 
