--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <img src="images/incuba.png" alt="Logo Incuba Andina" id="logo" />
     <div id="app">
-      <h2>Bienvenido a </h2><br /><h2>Incuba Andina Lab</h2>
+      <h2>Bienvenido a<br />
+        Incuba Andina Lab</h2>
       <button id="loginBtn">
       <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="GoogleIcon">
       Ingresar con cuenta de google
