--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div id="app">
       <h2>Bienvenido a<br />
         Incuba Andina Lab</h2>
-      <button id="loginBtn">
+      <center><button id="loginBtn">
       <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="GoogleIcon">
       Ingresar con cuenta de google
-      </button>
+      </button></center>
   </div>
 
   <script type="module">
