--- a/acceso.html
+++ b/acceso.html
@@ -32,7 +32,7 @@
 
     // Lista de usuarios con roles manuales
     const userRoles = {
-      '018201307h@uandina.edu.pe': 'docente', // Usuario docente
+      '018201307h@uandina.edu.pe': 'participante', // Usuario docente
       'rhumpire@uandina.edu.pe': 'docente', // Otro usuario docente
       'davilad@uandina.edu.pe': 'docente', // Otro usuario docente
       'participante@uandina.edu.pe': 'participante', // Usuario participante
@@ -59,7 +59,7 @@
             window.location.href = "admin_horarios.html"; // Página para administrar horarios
           } else if (userRole === 'participante') {
             // Redirigir a la página de registro de horarios para participantes
-            window.location.href = "calendario.html"; // Página para registrar horarios
+            window.location.href = "main.html"; // Página para registrar horarios
           }
         } else {
           // Si el correo no está registrado, redirigir al login
