--- a/acceso.html
+++ b/acceso.html
@@ -63,7 +63,7 @@
           }
         } else {
           // Si el correo no está registrado, redirigir al login
-           await Swal.fire('¡Error!', 'Este correo no está registrado como docente o participante.', 'error');
+           //await Swal.fire('¡Error!', 'Este correo no está registrado como docente o participante.', 'error');
            window.location.href = "index.html"; // Redirigir al login si no está registrado
         }
       } else {
