--- a/acceso.html
+++ b/acceso.html
@@ -56,10 +56,10 @@
           // Redirigir según el rol
           if (userRole === 'docente') {
             // Redirigir a la página de administración de horarios para docentes
-            window.location.href = "admin_horarios.html"; // Página para administrar horarios
+            window.location.href = "main_docente.html"; // Página para administrar horarios
           } else if (userRole === 'participante') {
             // Redirigir a la página de registro de horarios para participantes
-            window.location.href = "main.html"; // Página para registrar horarios
+            window.location.href = "main_participantes.html"; // Página para registrar horarios
           }
         } else {
           // Si el correo no está registrado, redirigir al login
