--- a/acceso.html
+++ b/acceso.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Control de Acceso - Incuba Andina Lab</title>
   <link rel="stylesheet" href="styles1.css" />
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  <script src="authCheck.js"></script>
 </head>
 <body>
   <div id="app">
