--- a/main_participantes.html
+++ b/main_participantes.html
@@ -5,6 +5,9 @@
   <title>Reserva de Horarios - Incuba Andina Lab</title>
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  <script src="authCheck.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
