--- a/acceso.html
+++ b/acceso.html
@@ -67,7 +67,7 @@
         } else {
           // Si el correo no está registrado, redirigir al login
            await Swal.fire('¡Error!', 'Este correo no está registrado como docente o participante.', 'error');
-           window.location.href = "index.html"; // Redirigir al login si no está registrado
+          } else { Swal.fire({ icon: 'error', title: '¡Error!', text: 'Este correo no está registrado como docente o participante.', confirmButtonText: 'Aceptar' }).then(() => window.location.href = "index.html"); }
         }
       } else {
         // Si no está autenticado, redirigir al login
